# envicorn

./: .gitignore  CONTRIBUTE.md  README.md  pyproject.toml
.github/copilot/: config.yml
.github/workflows/: code_style_check.yml  markdown_style_check.yml
doc/: USAGE.md
snap/: snapcraft.yaml
test_env_setup_util/: env_setup.py  requirements.txt
test_env_setup_util/demo/: example_env_setup.yaml
test_env_setup_util/demo/global_templates/: get_initial_network_info.yaml
test_env_setup_util/libs/: common.py  exceptions.py  model.py  ssh_handler.py
test_env_setup_util/libs/operator/: common.py  debian.py  snap.py
test_env_setup_util/schema/: env_setup_schema.json
