[project]
name = "envicorn"
version = "0.1.0"
description = "An utility to help users remotely configure their testing environment"
authors = [
    {name = "Stanley Huang",email = "60045212+tomli380576@users.noreply.github.com"},
    {name = "Zhongning Li",email = "60045212+tomli380576@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
